<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WifiPlayer-Server</string>
    <string name="welcome">Welcome to Wifi player server :</string>
    <string name="version">Version:</string>
    <string name="success">Successful</string>
    <string name="error">Error</string>
    <string name="sdcarderror">SDCARD Error!</string>

    <string name="player_paused">PAUSED</string>
    <string name="player_play">PLAY</string>
    <string name="player_stop">STOP</string>
    <string name="player_next">NEXT</string>
    <string name="player_previous">PREVIOUS</string>
</resources>
