<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:layout_gravity="center" android:id="@+id/framework"
            android:weightSum="1">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/welcome"
                    android:id="@+id/welcome"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/app_name"
                    android:id="@+id/textView"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/show_local_ip"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_weight="0.97" android:weightSum="1">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
            </LinearLayout>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/resultView"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:weightSum="1">
                <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/player_play"
                        android:id="@+id/btn_online_start"
                        android:layout_weight="0.11"/>
                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/player_paused"
                        android:id="@+id/btn_online_paused" android:layout_gravity="center_horizontal"
                        android:layout_weight="0.11"/>
                <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/player_stop"
                        android:id="@+id/btn_online_stop"
                        android:layout_weight="0.11"/>
                <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/player_previous"
                        android:id="@+id/btn_online_p" android:layout_weight="0.11"/>
                <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/player_next"
                        android:id="@+id/btn_online_n" android:layout_weight="0.11"/>
            </LinearLayout>
            <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/music_progress" android:indeterminate="false"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/version_tv" android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>